--- a/Calulot_Matthew_Assignment1/template/invoice.template
+++ b/Calulot_Matthew_Assignment1/template/invoice.template
@@ -10,7 +10,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Receipt</title>
-  <h1>Thank you for supporting Matt's Pen Emporium. Please enjoy your new pen!</h1>
+  <h1>Thank you for supporting Matt's Pen Emporium. Please enjoy writing!</h1>
 </head>
 
 <body>
